@@ -17,23 +17,26 @@
  */
 package org.apache.beam.sdk.options;
 
-import static org.apache.beam.vendor.guava.v26_0_jre.com.google.common.base.Preconditions.checkNotNull;
+import static org.apache.beam.vendor.guava.v32_1_2_jre.com.google.common.base.Preconditions.checkNotNull;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
+import java.time.Duration;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import org.apache.beam.sdk.annotations.Experimental;
-import org.apache.beam.sdk.annotations.Experimental.Kind;
+import java.util.logging.Level;
+import java.util.logging.LogManager;
+import java.util.logging.Logger;
 import org.apache.beam.sdk.util.InstanceBuilder;
-import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.annotations.VisibleForTesting;
+import org.apache.beam.vendor.guava.v32_1_2_jre.com.google.common.annotations.VisibleForTesting;
+import org.apache.beam.vendor.guava.v32_1_2_jre.com.google.common.collect.ImmutableMap;
 import org.checkerframework.checker.index.qual.NonNegative;
 
 /** Options that are used to control configuration of the SDK harness. */
-@Experimental(Kind.PORTABILITY)
 @Description("Options that are used to control configuration of the SDK harness.")
-public interface SdkHarnessOptions extends PipelineOptions {
+public interface SdkHarnessOptions extends PipelineOptions, MemoryMonitorOptions {
   /** The set of log levels that can be used in the SDK harness. */
   enum LogLevel {
     /** Special level used to turn off logging. */
@@ -52,7 +55,18 @@ public interface SdkHarnessOptions extends PipelineOptions {
     DEBUG,
 
     /** LogLevel for logging tracing messages. */
-    TRACE
+    TRACE;
+
+    /** Map from LogLevel enums to java logging level. */
+    public static final ImmutableMap<LogLevel, Level> LEVEL_CONFIGURATION =
+        ImmutableMap.<SdkHarnessOptions.LogLevel, Level>builder()
+            .put(OFF, Level.OFF)
+            .put(ERROR, Level.SEVERE)
+            .put(WARN, Level.WARNING)
+            .put(INFO, Level.INFO)
+            .put(DEBUG, Level.FINE)
+            .put(TRACE, Level.FINEST)
+            .build();
   }
 
   /** This option controls the default log level of all loggers without a log level override. */
@@ -85,6 +99,26 @@ public interface SdkHarnessOptions extends PipelineOptions {
   SdkHarnessLogLevelOverrides getSdkHarnessLogLevelOverrides();
 
   void setSdkHarnessLogLevelOverrides(SdkHarnessLogLevelOverrides value);
+
+  /** Whether to include SLF4J MDC in log entries. */
+  @Description(
+      "This option controls whether SLF4J MDC keys and values will be appended to log entries. "
+          + "This used by Beam to add structured data to log entries, such as quota events and "
+          + "return statuses.")
+  @Default.Boolean(true)
+  boolean getLogMdc();
+
+  void setLogMdc(boolean value);
+
+  /** This option controls whether logging will be redirected through the FnApi. */
+  @Description(
+      "Controls whether logging will be redirected through the FnApi. In normal usage, setting "
+          + "this to a non-default value will cause log messages to be dropped.")
+  @Default.Boolean(true)
+  @Hidden
+  boolean getEnableLogViaFnApi();
+
+  void setEnableLogViaFnApi(boolean enableLogViaFnApi);
 
   /**
    * Size (in MB) of each grouping table used to pre-combine elements. Larger values may reduce the
@@ -290,18 +324,24 @@ public interface SdkHarnessOptions extends PipelineOptions {
      * name}, or fully qualified Java {@link Package#getName() package name}, or custom logger name.
      * The {@code LogLevel} represents the log level and must be one of {@link LogLevel}.
      */
-    @JsonCreator
+    @JsonCreator(mode = JsonCreator.Mode.DELEGATING)
     public static SdkHarnessLogLevelOverrides from(Map<String, String> values) {
       checkNotNull(values, "Expected values to be not null.");
       SdkHarnessLogLevelOverrides overrides = new SdkHarnessLogLevelOverrides();
       for (Map.Entry<String, String> entry : values.entrySet()) {
+        String module = entry.getKey();
+        String level = entry.getValue();
+        if (level.equals("WARNING")) {
+          // alias: "WARNING" -> "WARN"
+          level = "WARN";
+        }
         try {
-          overrides.addOverrideForName(entry.getKey(), LogLevel.valueOf(entry.getValue()));
+          overrides.addOverrideForName(module, LogLevel.valueOf(level));
         } catch (IllegalArgumentException e) {
           throw new IllegalArgumentException(
               String.format(
                   "Unsupported log level '%s' requested for %s. Must be one of %s.",
-                  entry.getValue(), entry.getKey(), Arrays.toString(LogLevel.values())));
+                  level, module, Arrays.toString(LogLevel.values())));
         }
       }
       return overrides;
@@ -309,13 +349,15 @@ public interface SdkHarnessOptions extends PipelineOptions {
   }
 
   /**
-   * Open modules needed for reflection that access JDK internals with Java 9+
+   * Open modules needed for reflection that access JDK internals with Java 9+.
    *
    * <p>With JDK 16+, <a href="#{https://openjdk.java.net/jeps/403}">JDK internals are strongly
    * encapsulated</a> and can result in an InaccessibleObjectException being thrown if a tool or
    * library uses reflection that access JDK internals. If you see these errors in your worker logs,
-   * you can pass in modules to open using the format module/package=target-module(,target-module)*
-   * to allow access to the library. E.g. java.base/java.lang=jamm
+   * you can pass in modules to open using the format {@code
+   * module/package=target-module[,module2/package2=another-target-module]} to allow access to the
+   * library. E.g. {@code --jdkAddOpenModules=java.base/java.lang=jamm}. This will set {@code
+   * --add-opens} JVM flag in SDK Harness invocation.
    *
    * <p>You may see warnings that jamm, a library used to more accurately size objects, is unable to
    * make a private field accessible. To resolve the warning, open the specified module/package to
@@ -325,4 +367,64 @@ public interface SdkHarnessOptions extends PipelineOptions {
   List<String> getJdkAddOpenModules();
 
   void setJdkAddOpenModules(List<String> options);
+
+  /**
+   * Add modules to the default root set with Java 11+.
+   *
+   * <p>Set {@code --add-modules} JVM flag in SDK Harness invocation. E.g. {@code
+   * --jdkAddModules=module1,module2}.
+   */
+  @Description("Add modules to the default root set with Java 11+.")
+  List<String> getJdkAddRootModules();
+
+  void setJdkAddRootModules(List<String> options);
+
+  /**
+   * Configure log manager's default log level and log level overrides from the sdk harness options,
+   * and return the list of configured loggers.
+   */
+  static List<Logger> getConfiguredLoggerFromOptions(SdkHarnessOptions loggingOptions) {
+    ArrayList<Logger> configuredLoggers = new ArrayList<>();
+    LogManager logManager = LogManager.getLogManager();
+    Logger rootLogger = logManager.getLogger("");
+
+    // Use the passed in logging options to configure the various logger levels.
+    if (loggingOptions.getDefaultSdkHarnessLogLevel() != null) {
+      rootLogger.setLevel(
+          SdkHarnessOptions.LogLevel.LEVEL_CONFIGURATION.get(
+              loggingOptions.getDefaultSdkHarnessLogLevel()));
+    }
+
+    if (loggingOptions.getSdkHarnessLogLevelOverrides() != null) {
+      for (Map.Entry<String, SdkHarnessOptions.LogLevel> loggerOverride :
+          loggingOptions.getSdkHarnessLogLevelOverrides().entrySet()) {
+        Logger logger = logManager.getLogger(loggerOverride.getKey());
+        if (logger == null) {
+          // create a logger if not exist
+          logger = Logger.getLogger(loggerOverride.getKey());
+        }
+        logger.setLevel(
+            SdkHarnessOptions.LogLevel.LEVEL_CONFIGURATION.get(loggerOverride.getValue()));
+        configuredLoggers.add(logger);
+      }
+    }
+    return configuredLoggers;
+  }
+
+  @Hidden
+  @Description(
+      "Timeout used for cache of bundle processors. Defaults to a minute for batch and an hour for streaming.")
+  @Default.InstanceFactory(BundleProcessorCacheTimeoutFactory.class)
+  Duration getBundleProcessorCacheTimeout();
+
+  void setBundleProcessorCacheTimeout(Duration duration);
+
+  class BundleProcessorCacheTimeoutFactory implements DefaultValueFactory<Duration> {
+    @Override
+    public Duration create(PipelineOptions options) {
+      return options.as(StreamingOptions.class).isStreaming()
+          ? Duration.ofHours(1)
+          : Duration.ofMinutes(1);
+    }
+  }
 }
